--- a/authservice/bookinfo-example/authservice/values.yaml
+++ b/authservice/bookinfo-example/authservice/values.yaml
@@ -5,11 +5,17 @@ authservice:
   enforcingMode: ingress
 
 oidc:
-  idpURL: https://account.google.com
-  authorizationURI: "https://accounts.google.com/o/oauth2/v2/auth"
-  tokenURI: "https://oauth2.googleapis.com/token"
-  clientID: your-client-id
-  clientSecret: your-client-secret
+  # idpURL: https://account.google.com
+  # authorizationURI: "https://accounts.google.com/o/oauth2/v2/auth"
+  # tokenURI: "https://oauth2.googleapis.com/token"
+  # clientID: your-client-id
+  # clientSecret: your-client-secret
   # JSON string containing the identity provider's public key for validating id token.
   # jwks: "<>"
 
+  idpURL: https://0.0.0.0:8443/realms/uds
+  # authorizationURI: "https://accounts.google.com/o/oauth2/v2/auth"
+  authorizationURI: "https://0.0.0.0:8443/realms/uds/protocol/openid-connect/auth"
+  tokenURI: "https://0.0.0.0:8443/realms/uds/protocol/openid-connect/token"
+  clientID: bookinfo
+  clientSecret: 16kcHDKJngKNjOFgXRlOYoMjkQwYApGr
